exports[`test the round button handling an onclick event 1`] = `
<button
  aria-label=""
  className="mRGEO"
  onClick={[Function]}
  type="button">
  ButtonValue
</button>
`;

exports[`test the round button handling an onclick event 2`] = `
<button
  aria-label=""
  className="mRGEO"
  onClick={[Function]}
  type="button">
  ButtonValue
</button>
`;

exports[`test the round button matches the snapshot 1`] = `
<button
  aria-label=""
  className="mRGEO"
  type="button">
  ButtonValue
</button>
`;

exports[`test the round button with button type given matches the snapshot 1`] = `
<button
  aria-label=""
  className="mRGEO"
  type="button">
  ButtonValue
</button>
`;
